[project]
name = "call-me-maybe"
version = "0.1.0"
description = "Function calling for LLMs via from-scratch constrained decoding (42 curriculum project)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "<login1>" },
    # { name = "<login2>" },
]

dependencies = [
    "pydantic>=2.7",
    "numpy>=1.26",
    "flake8>=7.0",
    "mypy>=1.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

package = false

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
disallow_untyped_defs = true
check_untyped_defs = true
exclude = ["^tests/", "^\\.venv/"]

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
exclude = [".venv", "__pycache__", ".mypy_cache", ".pytest_cache", "data"]
